--- a/source/MonitoringClient/App.xaml
+++ b/source/MonitoringClient/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="MonitoringClient.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MonitoringClient"
-             StartupUri="View/StartView.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+  x:Class="MonitoringClient.App"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:local="clr-namespace:MonitoringClient"
+  StartupUri="View/StartView.xaml">
+  <Application.Resources />
 </Application>
