--- a/source/MonitoringClient/View/MonitoringView.xaml
+++ b/source/MonitoringClient/View/MonitoringView.xaml
@@ -1,11 +1,16 @@
-﻿<Window x:Class="MonitoringClient.View.MonitoringView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MonitoringClient"
-        mc:Ignorable="d"
-        Title="MonitoringView" Height="450" Width="800" Background="#FF6BB4FD" Foreground="#FF2FB3D1">
+﻿<Window
+  x:Class="MonitoringClient.View.MonitoringView"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:local="clr-namespace:MonitoringClient"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  Title="MonitoringView"
+  Width="800"
+  Height="450"
+  Background="#FF6BB4FD"
+  Foreground="#FF2FB3D1"
+  mc:Ignorable="d">
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="0.05*" />
@@ -18,35 +23,129 @@
       <RowDefinition Height="0.5*" />
       <RowDefinition Height="0.05*" />
     </Grid.RowDefinitions>
-    <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
-      <Button Name="loadBtn"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Width="150" Margin="0 0 15 0" BorderThickness="0" Background="#FFFFFBFB" Click="BtnLoad_Click" TabIndex="0" ToolTip="Load all Log Entries">
+    <StackPanel
+      Grid.Row="1"
+      Grid.Column="1"
+      Orientation="Horizontal">
+      <Button
+        Name="loadBtn"
+        Width="150"
+        Margin="0,0,15,0"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Background="#FFFFFBFB"
+        BorderThickness="0"
+        Click="BtnLoad_Click"
+        FontSize="20"
+        TabIndex="0"
+        ToolTip="Load all Log Entries">
         <StackPanel Orientation="Horizontal">
-          <Image Source="D:\ProjectE\ZbW.Projektarbeit.ProgAdv\img\load.png" HorizontalAlignment="Center" Opacity="0.5" Stretch="Fill" Width="20" UseLayoutRounding="False" Height="20" Margin="5 5 5 5"/>
-          <Button Content="Load" Margin="5 5 5 5" BorderThickness="0" Background="White" ></Button>
+          <Image
+            Width="20"
+            Height="20"
+            Margin="5,5,5,5"
+            HorizontalAlignment="Center"
+            Opacity="0.5"
+            Source="D:\ProjectE\ZbW.Projektarbeit.ProgAdv\img\load.png"
+            Stretch="Fill"
+            UseLayoutRounding="False" />
+          <Button
+            Margin="5,5,5,5"
+            Background="White"
+            BorderThickness="0"
+            Content="Load" />
         </StackPanel>
       </Button>
-      <Button Name="confirmBtn"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Width="150" Margin="0 0 15 0" BorderThickness="0" Background="#FFFFFBFB" TabIndex="1" ToolTip="Quit a Log Entry">
+      <Button
+        Name="confirmBtn"
+        Width="150"
+        Margin="0,0,15,0"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Background="#FFFFFBFB"
+        BorderThickness="0"
+        FontSize="20"
+        TabIndex="1"
+        ToolTip="Quit a Log Entry">
         <StackPanel Orientation="Horizontal">
-          <Image Source="D:\ProjectE\ZbW.Projektarbeit.ProgAdv\img\confirm.PNG" HorizontalAlignment="Center" Opacity="0.5" Stretch="Fill" Width="20" UseLayoutRounding="False" Height="20" Margin="5 5 5 5"/>
-          <Button Content="Confirm" Margin="5 5 5 5" BorderThickness="0" Background="White" ></Button>
+          <Image
+            Width="20"
+            Height="20"
+            Margin="5,5,5,5"
+            HorizontalAlignment="Center"
+            Opacity="0.5"
+            Source="D:\ProjectE\ZbW.Projektarbeit.ProgAdv\img\confirm.PNG"
+            Stretch="Fill"
+            UseLayoutRounding="False" />
+          <Button
+            Margin="5,5,5,5"
+            Background="White"
+            BorderThickness="0"
+            Content="Confirm" />
         </StackPanel>
       </Button>
-      <Button Name="addBtn"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Width="150" Margin="0 0 15 0" BorderThickness="0" Background="#FFFFFBFB" Click="BtnLoad_Click" TabIndex="2" ToolTip="Add new Log Entry">
+      <Button
+        Name="addBtn"
+        Width="150"
+        Margin="0,0,15,0"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Background="#FFFFFBFB"
+        BorderThickness="0"
+        Click="BtnLoad_Click"
+        FontSize="20"
+        TabIndex="2"
+        ToolTip="Add new Log Entry">
         <StackPanel Orientation="Horizontal">
-          <Image Source="D:\ProjectE\ZbW.Projektarbeit.ProgAdv\img\add.png" HorizontalAlignment="Center" Opacity="0.5" Stretch="Fill" Width="20" UseLayoutRounding="False" Height="20" Margin="5 5 5 5"/>
-          <Button Content="Add" Margin="5 5 5 5" BorderThickness="0" Background="White" ></Button>
+          <Image
+            Width="20"
+            Height="20"
+            Margin="5,5,5,5"
+            HorizontalAlignment="Center"
+            Opacity="0.5"
+            Source="D:\ProjectE\ZbW.Projektarbeit.ProgAdv\img\add.png"
+            Stretch="Fill"
+            UseLayoutRounding="False" />
+          <Button
+            Margin="5,5,5,5"
+            Background="White"
+            BorderThickness="0"
+            Content="Add" />
         </StackPanel>
       </Button>
     </StackPanel>
-    <ListView Name="LogEntriesGrid" Grid.Column="1" Grid.Row="2" ItemsSource="{Binding LogEntries}" HorizontalContentAlignment="Stretch">
+    <ListView
+      Name="LogEntriesGrid"
+      Grid.Row="2"
+      Grid.Column="1"
+      HorizontalContentAlignment="Stretch"
+      ItemsSource="{Binding LogEntries}">
       <ListView.View>
         <GridView x:Name="logEntryGrid">
-          <GridViewColumn Header="Id" DisplayMemberBinding="{Binding Id}" Width="50"></GridViewColumn>
-          <GridViewColumn Header="Hostname" DisplayMemberBinding="{Binding Hostname}" Width="150"></GridViewColumn>
-          <GridViewColumn Header="Pod" DisplayMemberBinding="{Binding Pod}" Width="150"></GridViewColumn>
-          <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Location}" Width="150"></GridViewColumn>
-          <GridViewColumn Header="Severity" DisplayMemberBinding="{Binding Severity}" Width="50"></GridViewColumn>
-          <GridViewColumn Header="Message" DisplayMemberBinding="{Binding Message}" Width="150"></GridViewColumn>
+          <GridViewColumn
+            Width="50"
+            DisplayMemberBinding="{Binding Id}"
+            Header="Id" />
+          <GridViewColumn
+            Width="150"
+            DisplayMemberBinding="{Binding Hostname}"
+            Header="Hostname" />
+          <GridViewColumn
+            Width="150"
+            DisplayMemberBinding="{Binding Pod}"
+            Header="Pod" />
+          <GridViewColumn
+            Width="150"
+            DisplayMemberBinding="{Binding Location}"
+            Header="Location" />
+          <GridViewColumn
+            Width="50"
+            DisplayMemberBinding="{Binding Severity}"
+            Header="Severity" />
+          <GridViewColumn
+            Width="150"
+            DisplayMemberBinding="{Binding Message}"
+            Header="Message" />
         </GridView>
       </ListView.View>
     </ListView>
