--- a/source/MonitoringClient/View/MonitoringView1.xaml
+++ b/source/MonitoringClient/View/MonitoringView1.xaml
@@ -1,20 +1,20 @@
-﻿<Window
-  x:Class="MonitoringClient.View.MonitoringView"
+﻿<UserControl
+  x:Class="MonitoringClient.View.MonitoringView1"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:local="clr-namespace:MonitoringClient"
+  xmlns:local="clr-namespace:MonitoringClient.View"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  Title="MonitoringView"
-  Width="800"
-  Height="450"
-  Background="#FF6BB4FD"
-  Foreground="#FF2FB3D1"
+  xmlns:viewModel="clr-namespace:MonitoringClient.ViewModel"
+  d:DesignHeight="450"
+  d:DesignWidth="800"
   mc:Ignorable="d">
+
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="0.05*" />
-      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="0.75*" />
+      <ColumnDefinition Width="0.25*" />
       <ColumnDefinition Width="0.05*" />
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
@@ -23,54 +23,69 @@
       <RowDefinition Height="0.5*" />
       <RowDefinition Height="0.05*" />
     </Grid.RowDefinitions>
-
     <StackPanel
       Grid.Row="1"
       Grid.Column="1"
       Orientation="Horizontal">
+      <Label
+        Margin="0,0,0,0"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center">
+        DB-Connection:
+      </Label>
+      <TextBox
+        Width="445"
+        VerticalAlignment="Center"
+        Text="{Binding Path=GetConetentTextBox}" />
+
+    </StackPanel>
+    <StackPanel
+      Grid.Row="2"
+      Grid.Column="2"
+      Orientation="Vertical">
       <Button
         Name="loadBtn"
         Width="100"
-        Margin="0,0,15,0"
+        Margin="0,0,15,15"
         HorizontalAlignment="Center"
         VerticalAlignment="Center"
         Background="#FFFFFBFB"
         BorderThickness="0"
-        Command="{Binding Path=LoadCommand}"
-        FontSize="12"
+        Command="{Binding LoadCommand}"
+        FontSize="14"
         TabIndex="0"
         ToolTip="Load all Log Entries">
         <StackPanel Orientation="Horizontal">
           <Image
             Width="15"
             Height="15"
-            Margin="5,5,5,5"
-            HorizontalAlignment="Center"
+            Margin="0,5,5,5"
+            HorizontalAlignment="Left"
             Opacity="0.5"
             Source="../Icons/load.png"
             Stretch="Fill"
             UseLayoutRounding="False" />
-          <TextBlock Margin="5,5,5,5">Load</TextBlock>
+          <TextBlock Margin="5,5,5,5"><Run Text="Load" /></TextBlock>
         </StackPanel>
       </Button>
       <Button
         Name="confirmBtn"
         Width="100"
-        Margin="0,0,15,0"
+        Margin="0,0,15,15"
         HorizontalAlignment="Center"
         VerticalAlignment="Center"
         Background="#FFFFFBFB"
         BorderThickness="0"
-        Command="{Binding Path=ConfirmCommand}"
-        FontSize="12"
+        Command="{Binding ConfirmCommand}"
+        FontSize="14"
         TabIndex="1"
         ToolTip="Quit a Log Entry">
         <StackPanel Orientation="Horizontal">
           <Image
             Width="15"
             Height="15"
-            Margin="5,5,5,5"
-            HorizontalAlignment="Center"
+            Margin="0,5,5,5"
+            HorizontalAlignment="Left"
             Opacity="0.5"
             Source="../Icons/confirm.PNG"
             Stretch="Fill" />
@@ -87,8 +102,8 @@
         VerticalAlignment="Center"
         Background="#FFFFFBFB"
         BorderThickness="0"
-        Command="{Binding Path=AddCommand}"
-        FontSize="12"
+        Command="{Binding AddCommand}"
+        FontSize="14"
         TabIndex="2"
         ToolTip="Add new Log Entry">
         <StackPanel Orientation="Horizontal">
@@ -96,7 +111,7 @@
             Width="15"
             Height="15"
             Margin="5,5,5,5"
-            HorizontalAlignment="Center"
+            HorizontalAlignment="Left"
             Opacity="0.5"
             Source="../Icons/add.png"
             Stretch="Fill"
@@ -123,15 +138,15 @@
             DisplayMemberBinding="{Binding Id}"
             Header="Id" />
           <GridViewColumn
-            Width="150"
+            Width="100"
             DisplayMemberBinding="{Binding Hostname}"
             Header="Hostname" />
           <GridViewColumn
-            Width="150"
+            Width="100"
             DisplayMemberBinding="{Binding Pod}"
             Header="Pod" />
           <GridViewColumn
-            Width="150"
+            Width="100"
             DisplayMemberBinding="{Binding Location}"
             Header="Location" />
           <GridViewColumn
@@ -146,4 +161,4 @@
       </ListView.View>
     </ListView>
   </Grid>
-</Window>
+</UserControl>
