--- a/source/MonitoringClient/View/MainUserControlView.xaml
+++ b/source/MonitoringClient/View/MainUserControlView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-  x:Class="MonitoringClient.View.MainUserControl"
+  x:Class="MonitoringClient.View.MainUserControlView"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,8 +11,8 @@
  >
 
   <Grid>
-    <local:MonitoringView1 x:Name="LoggerView" Visibility="{Binding MonitoringVisibility, Mode=TwoWay}" />
-    <local:AddLogEntryView1 x:Name="AddLogView" Visibility="{Binding AddLogEntryVisibility, Mode=TwoWay}" />
+    <local:MonitoringView x:Name="LoggerView" Visibility="{Binding MonitoringVisibility, Mode=TwoWay}" />
+    <local:AddLogEntryView x:Name="AddLogView" Visibility="{Binding AddLogEntryVisibility, Mode=TwoWay}" />
 
     <!--<local:AddLogEntryView1 x:Name="AddLogEntryView" Visibility="{Binding Path=AddLogEntryView}"></local:AddLogEntryView1>-->
   </Grid>
