--- a/source/MonitoringClient/View/MonitoringView.xaml
+++ b/source/MonitoringClient/View/MonitoringView.xaml
@@ -10,7 +10,7 @@
   d:DesignWidth="800"
   mc:Ignorable="d">
 
-  <Grid>
+  <Grid Background="DeepSkyBlue">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="0.05*" />
       <ColumnDefinition Width="0.75*" />
@@ -55,7 +55,7 @@
         FontSize="14"
         TabIndex="0"
         ToolTip="Load all Log Entries">
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Width="80">
           <Image
             Width="15"
             Height="15"
@@ -64,7 +64,7 @@
             Opacity="0.5"
             Source="../Icons/load.png"
             Stretch="Fill"
-            UseLayoutRounding="False" />
+          />
           <TextBlock Margin="5,5,5,5"><Run Text="Load" /></TextBlock>
         </StackPanel>
       </Button>
@@ -106,7 +106,7 @@
         FontSize="14"
         TabIndex="2"
         ToolTip="Add new Log Entry">
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Width="89">
           <Image
             Width="15"
             Height="15"
