--- a/source/MonitoringClient/View/AddLogEntryView.xaml
+++ b/source/MonitoringClient/View/AddLogEntryView.xaml
@@ -7,114 +7,114 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:viewModel="clr-namespace:MonitoringClient.ViewModel"
   d:DesignHeight="450"
-  d:DesignWidth="800"
+  d:DesignWidth="300"
   mc:Ignorable="d">
-  
-    <Grid>
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="0.05*" />
-        <ColumnDefinition Width="1*" />
-        <ColumnDefinition Width="1*" />
-        <ColumnDefinition Width="0.05*" />
-      </Grid.ColumnDefinitions>
-      <Grid.RowDefinitions>
-        <RowDefinition Height="0.05*" />
-        <RowDefinition Height="0.2*" />
-        <RowDefinition Height="0.2*" />
-        <RowDefinition Height="0.2*" />
-        <RowDefinition Height="0.2*" />
-        <RowDefinition Height="0.2*" />
-        <RowDefinition Height="0.05*" />
-      </Grid.RowDefinitions>
-      <Label
-        Grid.Row="1"
-        Grid.Column="1"
-        VerticalAlignment="center"
-        FontWeight="Bold">
-        Device Id:
-      </Label>
-      <ComboBox
-        Name="deviceCombo"
-        Grid.Row="1"
-        Grid.Column="2"
-        Width="auto"
-        VerticalAlignment="center"
-        ItemsSource="{Binding DeviceIds}"
-        SelectedItem="{Binding SelectedDeviceId}" />
-      <Label
-        Grid.Row="2"
-        Grid.Column="1"
-        VerticalAlignment="center"
-        FontWeight="Bold">
-        Hostname:
-      </Label>
-      <ComboBox
-        Grid.Row="2"
-        Grid.Column="2"
-        Width="auto"
-        VerticalAlignment="center"
-        ItemsSource="{Binding HostnameItems}"
-        SelectedItem="{Binding SelectedHostnameItem}" />
-      <Label
-        Grid.Row="3"
-        Grid.Column="1"
-        VerticalAlignment="center"
-        FontWeight="Bold">
-        Severity:
-      </Label>
-      <ComboBox
-        Grid.Row="3"
-        Grid.Column="2"
-        Width="auto"
-        VerticalAlignment="Center"
-        ItemsSource="{Binding SeverityItems}"
-        SelectedItem="{Binding SelectedSeverityItem}" />
-      <Label
-        Grid.Row="4"
-        Grid.Column="1"
-        VerticalAlignment="center"
-        FontWeight="Bold">
-        Message:
-      </Label>
-      <TextBox
-        Grid.Row="4"
-        Grid.Column="2"
-        Width="auto"
-        Height="20"
-        VerticalAlignment="center"
-        Text="{Binding Message, Mode=TwoWay}" />
-      <Button
-        Name="cancelBtn"
-        Grid.Row="5"
-        Grid.Column="1"
-        Width="100"
-        Padding="5,5,5,5"
-        HorizontalAlignment="Center"
-        VerticalAlignment="Center"
-        Background="#FFFFFBFB"
-        BorderThickness="0"
-        Command="{Binding CancelCommand}"
-        FontSize="12"
-        TabIndex="0"
-        ToolTip="Cancel">
-        Cancel
-      </Button>
-      <Button
-        Name="saveBtn"
-        Grid.Row="5"
-        Grid.Column="2"
-        Width="100"
-        Padding="5,5,5,5"
-        HorizontalAlignment="Center"
-        VerticalAlignment="Center"
-        Background="#FFFFFBFB"
-        BorderThickness="0"
-        Command="{Binding SaveCommand}"
-        FontSize="12"
-        TabIndex="0"
-        ToolTip="Save">
-        Save
-      </Button>
-    </Grid>
+
+  <Grid Background="DeepSkyBlue">
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="0.05*" />
+      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="0.05*" />
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="0.05*" />
+      <RowDefinition Height="0.2*" />
+      <RowDefinition Height="0.2*" />
+      <RowDefinition Height="0.2*" />
+      <RowDefinition Height="0.2*" />
+      <RowDefinition Height="0.2*" />
+      <RowDefinition Height="0.05*" />
+    </Grid.RowDefinitions>
+    <Label
+      Grid.Row="1"
+      Grid.Column="1"
+      VerticalAlignment="center"
+      FontWeight="Bold">
+      Device Id:
+    </Label>
+    <ComboBox
+      Name="deviceCombo"
+      Grid.Row="1"
+      Grid.Column="2"
+      Width="auto"
+      VerticalAlignment="center"
+      ItemsSource="{Binding DeviceIds}"
+      SelectedItem="{Binding SelectedDeviceId}" />
+    <Label
+      Grid.Row="2"
+      Grid.Column="1"
+      VerticalAlignment="center"
+      FontWeight="Bold">
+      Hostname:
+    </Label>
+    <ComboBox
+      Grid.Row="2"
+      Grid.Column="2"
+      Width="auto"
+      VerticalAlignment="center"
+      ItemsSource="{Binding HostnameItems}"
+      SelectedItem="{Binding SelectedHostnameItem}" />
+    <Label
+      Grid.Row="3"
+      Grid.Column="1"
+      VerticalAlignment="center"
+      FontWeight="Bold">
+      Severity:
+    </Label>
+    <ComboBox
+      Grid.Row="3"
+      Grid.Column="2"
+      Width="auto"
+      VerticalAlignment="Center"
+      ItemsSource="{Binding SeverityItems}"
+      SelectedItem="{Binding SelectedSeverityItem}" />
+    <Label
+      Grid.Row="4"
+      Grid.Column="1"
+      VerticalAlignment="center"
+      FontWeight="Bold">
+      Message:
+    </Label>
+    <TextBox
+      Grid.Row="4"
+      Grid.Column="2"
+      Width="auto"
+      Height="20"
+      VerticalAlignment="center"
+      Text="{Binding Message, Mode=TwoWay}" />
+    <Button
+      Name="cancelBtn"
+      Grid.Row="5"
+      Grid.Column="1"
+      Width="100"
+      Padding="5,5,5,5"
+      HorizontalAlignment="Center"
+      VerticalAlignment="Center"
+      Background="#FFFFFBFB"
+      BorderThickness="0"
+      Command="{Binding CancelCommand}"
+      FontSize="12"
+      TabIndex="0"
+      ToolTip="go back to MonitoringView">
+      Go Back
+    </Button>
+    <Button
+      Name="saveBtn"
+      Grid.Row="5"
+      Grid.Column="2"
+      Width="100"
+      Padding="5,5,5,5"
+      HorizontalAlignment="Center"
+      VerticalAlignment="Center"
+      Background="#FFFFFBFB"
+      BorderThickness="0"
+      Command="{Binding SaveCommand}"
+      FontSize="12"
+      TabIndex="0"
+      ToolTip="Save">
+      Save
+    </Button>
+  </Grid>
 
 </UserControl>
