problem duplicate Checker

--- a/source/MonitoringClient/View/AddLogEntryView.xaml
+++ b/source/MonitoringClient/View/AddLogEntryView.xaml
@@ -74,7 +74,7 @@
       Grid.Column="1"
       VerticalAlignment="center"
       FontWeight="Bold">
-      Message:
+      Text:
     </Label>
     <TextBox
       Grid.Row="4"
