--- a/source/MonitoringClient/View/MainUserControlView.xaml
+++ b/source/MonitoringClient/View/MainUserControlView.xaml
@@ -7,8 +7,7 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   d:DesignHeight="450"
   d:DesignWidth="800"
-  mc:Ignorable="d"
- >
+  mc:Ignorable="d">
 
   <Grid>
     <local:MonitoringView x:Name="LoggerView" Visibility="{Binding DataContext.MonitoringVisibility, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}" />
