--- a/source/MonitoringClient/View/LocationView.xaml
+++ b/source/MonitoringClient/View/LocationView.xaml
@@ -10,32 +10,30 @@
   d:DesignWidth="800"
   mc:Ignorable="d">
   <Grid Background="DeepSkyBlue">
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="0.85*" />
-
-    </Grid.ColumnDefinitions>
+    <Grid.ColumnDefinitions />
     <Grid.RowDefinitions>
-      <RowDefinition Height="0.05*" />
-      <RowDefinition Height="0.1*" />
-      <RowDefinition Height="0.5*" />
-      <RowDefinition Height="0.05*" />
+      <RowDefinition Height="1*" />
+      <RowDefinition Height="3*" />
+      <RowDefinition Height="1*" />
     </Grid.RowDefinitions>
     <Label
       x:Name="label"
-      Grid.Row="1"
+      Grid.Row="0"
       Grid.Column="0"
+      Width="108"
+      Height="40"
+      Margin="71,28"
       HorizontalAlignment="Center"
       VerticalAlignment="Center"
       Background="DeepSkyBlue"
-      Content="Location"
+      Content="Locations"
       FontSize="22"
       FontWeight="Bold" />
 
     <TreeView
-      Grid.Row="2"
+      Grid.Row="1"
       Grid.Column="0"
-      Height="200"
-      Margin="10"
+      Margin="20"
       ItemsSource="{Binding Locations}">
       <TreeView.ItemTemplate>
         <HierarchicalDataTemplate DataType="{x:Type model:ILocation}" ItemsSource="{Binding Childs}">
@@ -44,13 +42,12 @@
       </TreeView.ItemTemplate>
     </TreeView>
 
-
-
     <Button
       Name="cancelBtn"
-      Grid.Row="5"
-      Grid.Column="1"
+      Grid.Row="3"
       Width="100"
+      Height="26"
+      Margin="75,20,75,20"
       Padding="5,5,5,5"
       HorizontalAlignment="Center"
       VerticalAlignment="Center"
