--- a/source/MonitoringClinetDemo/MainWindow.xaml
+++ b/source/MonitoringClinetDemo/MainWindow.xaml
@@ -1,13 +1,16 @@
-﻿<Window x:Class="MonitoringClientDemo.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MonitoringClinetDemo"
-        xmlns:view="clr-namespace:MonitoringClient.View;assembly=MonitoringClient"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+﻿<Window
+  x:Class="MonitoringClientDemo.MainWindow"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:local="clr-namespace:MonitoringClinetDemo"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:view="clr-namespace:MonitoringClient.View;assembly=MonitoringClient"
+  Title="MainWindow"
+  Width="800"
+  Height="450"
+  mc:Ignorable="d">
+  <Grid>
     <view:MainUserControlView x:Name="MainUserControl" />
   </Grid>
 </Window>
